kubernetes/manifests/docker-container-registry.yml
---
apiVersion: v1
kind: Service
metadata:
  name: docker-container-registry
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 5000
  selector:
    app: docker-container-registry

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-container-registry
  namespace: default
  labels:
    app: docker-container-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-container-registry
  template:
    metadata:
      labels:
        app: docker-container-registry
    spec:
      containers:
        - name: app
          image: registry:2
          resources:
            requests:
              memory: "128Mi"
              cpu: "0.25"
            limits:
              memory: "1024Mi"
              cpu: "2.00"
          ports:
            - name: web
              containerPort: 5000
          volumeMounts:
            - name: registry
              mountPath: /var/lib/registry
      volumes:
        - name: registry
          hostPath:
            path: /storage/docker-container-registry/registry
