kubernetes/manifests/redis.yml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: redis
      port: 6379
  selector:
    app: redis

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: default
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:5.0.4
          command:
            - redis-server
            - "/storage/redis-config/redis.conf"
          ports:
            - containerPort: 6379
          resources:
            requests:
              memory: "128Mi"
              cpu: "0.25"
            limits:
              memory: "1024Mi"
              cpu: "2"
          volumeMounts:
            - mountPath: /storage/redis
              name: redis
            - mountPath: /storage/redis-config
              name: redis-config
      volumes:
        - name: redis
          emptyDir: {}
        - name: redis-config
          configMap:
            name: redis
            items:
              - key: redis-config
                path: redis.conf
