kubernetes/manifests/homer.yml
---
apiVersion: v1
kind: Service
metadata:
  name: homer
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 8080
  selector:
    app: homer
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: homer
  namespace: default
spec:
  basicAuth:
    secret: "homer"

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homer
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`${DOMAIN_NAME}`) || Host(`www.${DOMAIN_NAME}`)
      kind: Rule
      services:
        - name: homer
          port: 8080
      middlewares:
        - name: homer
  tls:
    secretName: wilcard-main-domain-tls

---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  name: homer
  namespace: default
  labels:
    app: homer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homer
  template:
    metadata:
      labels:
        app: homer
    spec:
      containers:
        - name: homer
          image: b4bz/homer
          resources:
            requests:
              memory: "32Mi"
              cpu: "0.25"
            limits:
              memory: "64Mi"
              cpu: "0.25"
          ports:
            - name: web
              containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /www/assets/config.yml
              subPath: config.yml
      volumes:
        - name: config
          configMap:
            name: homer
