kubernetes/manifests/laboulette.yml
---
apiVersion: v1
kind: Service
metadata:
  name: laboulette
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: laboulette

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: laboulette
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`laboulette.${DOMAIN_NAME}`)
      kind: Rule
      services:
        - name: laboulette
          port: 80
  tls:
    secretName: wilcard-main-domain-tls

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laboulette
  namespace: default
  labels:
    app: laboulette
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laboulette
  template:
    metadata:
      labels:
        app: laboulette
    spec:
      containers:
        - name: app
          image: ghcr.io/yoangau/laboulette/server:5.0
          resources:
            requests:
              memory: "128Mi"
              cpu: "0.25"
            limits:
              memory: "1024Mi"
              cpu: "2.00"
          ports:
            - name: web
              containerPort: 80
          volumeMounts:
            - name: db
              mountPath: /db
      imagePullSecrets:
        - name: dockerconfigjson-github-com-laboulette
      volumes:
        - name: db
          hostPath:
            path: /storage/laboulette/db
