kubernetes/manifests/pholi-server.yml
---
apiVersion: v1
kind: Service
metadata:
  name: pholi-server
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 3000
  selector:
    app: pholi-server

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pholi-server
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`pholi-server.${DOMAIN_NAME}`)
      kind: Rule
      services:
        - name: pholi-server
          port: 3000
  tls:
    secretName: wilcard-main-domain-tls

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pholi-server
  namespace: default
  labels:
    app: pholi-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pholi-server
  template:
    metadata:
      labels:
        app: pholi-server
    spec:
      containers:
        - name: app
          image: ghcr.io/yoangau/pholi-server:main
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "0.25"
            limits:
              memory: "1024Mi"
              cpu: "2.00"
          ports:
            - name: web
              containerPort: 3000
          volumeMounts:
            - name: db
              mountPath: /db
      imagePullSecrets:
        - name: dockerconfigjson-github-com-pholi-server
      volumes:
        - name: db
          hostPath:
            path: /storage/pholi-server/db
